--- a/sass/_header-footer.sass
+++ b/sass/_header-footer.sass
@@ -119,3 +119,4 @@ $gold: rgb(255, 204, 59)
     .footer
         flex-flow: column nowrap
         height: 20vh
+        margin: 1rem 0 3rem
